remove popup on refugee page

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -675,6 +675,8 @@ ar:
         categories: الفئات
         filter: فلتر
         map: خريطة
+      more_info_button: 'إلى مقدم المشورة:'
+      more_info_text: 'للمزيد من المعلومات حول:'
     search_results:
       bridge: من أجل
       enclosing: تم العثور على
@@ -768,8 +770,7 @@ ar:
         fra: لغة فرنسية - Français
         fuf: Pular - Pular
         ful: Ful - Fulfulde
-        gej: 
-        gen: جين  - Mina
+        gej: جين - Mina
         geo: الجورجية - ქართული
         hau: لغة هوسية - Hausanci
         hbs: لغة مونتنغرية - Crnogorski jezik / Црногорски језик
@@ -893,6 +894,9 @@ ar:
           سوف نخبرك بكل سرور بمجرد أن يكون في كلارات مساعدات بالقرب منك
           لذلك سجل عنوان بريدك الإليكتروني هنا
         send: 
+        more_information_overlay: 'عذراً. للأسف لايوجد مرشد بخصوص موضوع بحثك. ولكننا نسعى بشكل مستمر لتوسيع عروض المساعدة المتوفرة. سنقوم بكل سرور بإخبارك حالما يتوفر لدى clarat المزيد من المعلومات بخصوص موضوع بحثك. من أجل ذلك قم بإدخال عنوان بريدك الإلكتروني هنا.
+
+'
       nav_lang:
         legal_title: في كلارات، لا يمكن قراءة النص القانوني إلا باللغة الألمانية.
         title: |-
@@ -930,6 +934,10 @@ ar:
               family: إلى <span class="top-bar__emphasis">كلارات اللاجئين</span> تحول
               refugees: إلى <span class="top-bar__emphasis">كلارات الأسرة</span> تحول
         title: ترجمة فورية
+    modal_create:
+      js:
+        erb:
+          success: 
   offer:
     stamp:
       target_audience:
@@ -1098,8 +1106,6 @@ ar:
         أخصائية إجتماعية. هذا يعني أنها تعرف الكثير عن المجتمع. فهي تلاحظ بسرعة ما هو مهم. في كلارات هي تعمل مع فريق البحث وتقرر أي العروض يصلح ليكون ضمن عروض كلارات. أغنيتها المفضلة هي La
         Prima Estate ل. Erlend Oye.
       andrea: درست إدارة متعددة الثقافات. هذه يعني أنها تعرف عن الإقتصاد والثقافة. هي تعمل بدقة شديدة. في كلارات هي عضوة بالفريق البحثي وهي تعتني بالشكل العام لكلارات فاميلي. أغنيتها المفضلة هي Work Me ل. The Black Keys.
-      anja: هي خبيرة إقتصادية ومهندسة. إنها قادرة على التفكير المنطقي السريع. في كلارات هي عضوة بالفريق البحثي. وهي تتأكد من جودة العمل. أغنيتها المفضلة هي Where is my mind ل den Pixies.
-      ann-sophie: درست دراسات ثقافية وإجتماعية. هي على دراية كبيرة بموضوع الهجرة. يمكنها ترتيب وفهم الأشياء. في كلارات هي عضوة بفريق البحث. أغنيتها المفضلة هي Papertrails ل. Darkside.
       anna: هي متخصصة في علم اللغة. هذا يعني أنها تعرف الكثير عن اللغات المختلفة. وهي على معرفة جيدة بالآداب. يمكنها فهم الأشياء المعقدة جيداً. في كلارات هي عضوة في الفريق البحثي. أغنيتها المفضلة هي 1009 ل.Bonobo.
       anne: درست إقتصاد وعلاقات عامة. هي سريعة جدا في التفكير المنطقي. في كلارات هي المديرة. وهي تتابع عمل الفريق بأكمله وتقوم بتنظيم كل شئ. أغنيتها المفضلة هي Denken Sie Groß  ل.Deichkind.
       astrid: خبيرة سياسية. هذا يعني أنها تعرف الكثير عن السياسة والمجتمع.  هي دائما مرحة وتعكس هذا على الآخرين. هي عضوة في فريق البحث لدى كلارات. أغنيتها المفضلة هي You Got Me ل. The Roots.
@@ -1139,7 +1145,6 @@ ar:
       lisa: مصممة إبتكارات. هي تحب التطوير عن طريق حلول أخرى مبدعة. كما يمكنها الرسم جيداً. في كلارات هي عضوة في الفريق البحثي وتتواصل مع مستخدمي الصفحة. وتبحث لتكتشف من يستخدم كلارات. أغنيتها المفضلة هي Resolution ل.Matt Corby.
       magdalena: 'درست مجالات مختلفة من دراسات أمريكا اللاتينية. هذا يعني أنها تعرف الكثير عن الثقافة والسياسة في أمريكا اللاتينية. هي قادرة على التخطيط والتنظيم في العمل. في كلارات هي عضوة بفريق البحث. أغنيتها المفضلة هي Summer Breeze ل. CocoRosie.  '
       marcus: مصمم ويب. هذا يعني أنه يستطيع برمجة صفحات الإنترنت والشكل العام للصفحة. هو أيضا واضع خطط جيد. في كلارات هو عضو بفريق الآي تي أو تكنولوجيا المعلومات. ويعتني بجعل صفحات الإنترنت الخاصة بنا تبدو في شكل جيد. أغنيته المفضلة هي Hysteria ل. MUSE
-      marie: باحثة في مجال السلام والصراع. هذا يعني أنها تعرف الكثير عن الصراعات والحروب. هي قادرة على تجميع المعلومات وترتيبها بشكل سريع. في كلارات هي عضوة بفريق البحث. أغنيتها المفضلة هي Move On Up ل. Curtis Mayfield..
       meta_description: هذا هو فريق عمل قائمة المساعدات في ألمانيا. أكثر من ٤٠ موظف يعملون يومياً؛ لكي تجد المساعدات بسهولة.
       michaela: درست نظم معلومات اقتصادية. يمكنها أن تحمس الناس لشئ ما. وهي تعرف وسائل الإتصال الحديثة جيداً. في كلارات هي عضوة في الفريق البحثي. وتعتني بأن صفحتنا على الإنترنت تعمل بشكل جيد. أغنيتها المفضلة هي Digital Love ل.Daft Punk.
       nahla: 'متخصصة في علم الآثار. تعرف الكثير عن تاريخ البشر. يمكنها العمل جيداً وبسرعة. في كلارات هي عضوة بفريق الترجمة وتقوم بترجمة كلارات إلى اللغة العربية. أغنيتها المفضلة هي نسم علينا الهوى لفيروز. '
@@ -1396,3 +1401,4 @@ ar:
     new:
       button: الرسالة وصلت
       email_placeholder: عنوان البريد الإليكتروني
+      placeholder: 
