--- a/config/locales/fa.yml
+++ b/config/locales/fa.yml
@@ -106,7 +106,7 @@ fa:
           answer: ما همیشه بر اینکه اطلاعات در clarat به روز باشد نظارت می کنیم.زیرا فقط در این صورت clarat می تواند به کودکان٬جوانان٬خانواده و پناهندگان کمک کند.اگر اطلاعات صحیح نباشند ما آنها را به روز رسانی کرده و تغییر می دهیم.
           question: آیا اطلاعات clarat به روز می باشد؟
         question_7:
-          answer: بعضی از پیشنهادها را در <b>clarat family</b> و در <b>clarat refugees</b> می توانی از همه جا استفاده کنی.مهم نیست که کجا زندگی می کنی.پیشنهاد های بسیاری را از طریق تلفن و یا اینترنت می توانی پیدا کنی که تو را کمک خواهند کرد.بدین معنی که این کمک ها از طریق ایمیل٬چت و روی صفحه آنلاین ارائه می شود.از سایر پیشنهادهای بسیار دیگر نیز می توانی در نزدیکی محل سکونت خود بهره ببری. در  <b>clarat refugees</b> به زودی پیشنهادهای بسیاری در شهرهای بزرگ سراسر آلمان پیدا می کنی.در حال حاضر این خدمات در شهرهای برلین٬ کلن و دوسلدورف ارائه می شود.ما خدمات <b>clarat family</b> را از برلین شروع به کار کردیم.در اینجا پیشنهادهای بسیاری وجود دارند٬ با این حال ما به جمع آوری اطلاعات ادامه می دهیم.به زودی حتی در شهرهای بزرگ دیگر آلمان.
+          answer: بعضی از پیشنهادها را در <b>clarat family</b> و در <b>clarat refugees</b> می توانی از همه جا استفاده کنی.مهم نیست که کجا زندگی می کنی.پیشنهاد های بسیاری را از طریق تلفن و یا اینترنت می توانی پیدا کنی که تو را کمک خواهند کرد.بدین معنی که این کمک ها از طریق ایمیل٬چت و روی صفحه آنلاین ارائه می شود.از سایر پیشنهادهای بسیار دیگر نیز می توانی در نزدیکی محل سکونت خود بهره ببری. در  <b>clarat refugees</b> به زودی پیشنهادهای بسیاری در شهرهای بزرگ سراسر آلمان پیدا می کنی.در حال حاضر این خدمات در شهرهای برلین٬ هامبورگ،مونیخ،دورتموند،کلن، دوسلدورف،نورنبرگ و اشتوتگارت ارائه می شود.ما خدمات <b>clarat family</b> را از برلین شروع به کار کردیم.در اینجا پیشنهادهای بسیاری وجود دارند٬ با این حال ما به جمع آوری اطلاعات ادامه می دهیم.به زودی حتی در شهرهای بزرگ دیگر آلمان.
           question: آیا clarat در سراسر آلمان فعالیت دارد؟
         question_8:
           answer: clarat کمک هایی را که می توانی در نزدیکی خود پیدا کنی را در یک فهرست و دید کلی به تو نشان می دهد.همچنین ما به تو می گوییم دقیقا چه کاری را باید انجام دهی تا این که کمک دریافت کنی. ما همیشه با زبان ساده آنها را می نویسیم برای اینکه درک آن برای همه آسان باشد.چرا که در clarat باید حتی کسانی که آلمانی به خوبی صحبت نمی کنند نیز کمک بیابند.همچنین می توانی همه پیشنهادها را به زبان های دیگر مطالعه کنی.برای اطلاعات بیشتر روی این لینک کلیک کن%{ref_to_how_many_languages}.
@@ -730,6 +730,8 @@ fa:
         categories: طبقه بندی ها
         filter: فیلتر
         map: نقشه
+      more_info_button: نزد مشاور
+      more_info_text: 'اطلاعات بیشتر در مورد:'
     search_results:
       bridge: برای جستجوی عبارت
       enclosing: پیدا کردن
@@ -835,8 +837,7 @@ fa:
         fra: فرانسوی - Français
         fuf: Pular - Pular
         ful: Ful - Fulfulde
-        gej: 
-        gen: جين  - Mina
+        gej: جين - Mina
         geo: گرجی - ქართული
         hau: هوسى - Hausanci
         hbs: مونتنگرایی - Crnogorski jezik / Црногорски језик
@@ -950,6 +951,7 @@ fa:
           text: آن چیزی را که ما می توانیم بهبود بدهیم و یا مورد علاقه تو می باشد را به ما اعلام کن.بدین منظور ما با کمال میل با تو تماس می گیریم.آیا اجازه ارسال ایمیل با اعلام جزئیات را به تو داریم؟
         unavailable_location_modal: در محل زندگی تو و حال حاضر در clarat فقط پیشنهادهای تلفنی یا آنلاین موجود می باشد.این بدین معنی است که به تو کمک تلفنی یا آنلاین می شود.بطور مثال از طریق ایمیل و یا در چت.به محض اینکه در در اینجا و در نزدیکی محل سکونت تو کمکی وجود داشت با کمال میل به تو اطلاع می دهیم.اطفا آدرس ایمیل خود را وارد کنید.
         send: 
+        more_information_overlay: با عرض پوزش.متاسفانه برای جستجوی تو هیچ مشاوری وجود ندارد.ما اما سعی می کنیم پیشنهادات خود را توسعه بدهیم.با کمال میل و به محض اینکه در clarat اطلاعات بیشتری در مورد جستجوی تو بدست آوردیم،تو را در جریان می گذاریم.به همین منظور آدرس ایمیل خود را در اینجا وارد کن.
       nav_lang:
         legal_title: در  clarat متن های قانونی فقط به زبان آلمانی قابل خواندن هستند.
         title: |-
@@ -987,6 +989,10 @@ fa:
               family: با صفحه <span class="top-bar__emphasis">clarat refugees</span> تعویض کردن
               refugees: با صفحه <span class="top-bar__emphasis">clarat family</span> تعویض کردن
         title: زبان خود را انتخاب کنید
+    modal_create:
+      js:
+        erb:
+          success: 
   offer:
     stamp:
       target_audience:
@@ -1146,8 +1152,6 @@ fa:
         او  کارشناس رشته جامعه شناسی است.این یعنی اینکه او اطلاعات زیادی در مورد اجتماع دارد.چیزی که مهم هست را سریع می بیند.در clarat در تیم تحقیق فعالیت دارد.او تصمیم میگیرد که چه چیزهایی در clarat به عنوان پیشنهاد ثبت شود.موسیقی دوست داشتنی او
         La Prima Estate از Erlend Oye می باشد.
       andrea: او در رشته مدیریت بین فرهنگی تحصیل کرده است.این بدین معنی است که او اطلاعات زیادی درمورد اقتصاد و قرهنگ دارد.او دقیق کار می کند.در clarat در تیم تحقیق فعالیت دارد و نگاه کلی در مورد موضوع دنیای خانواده دارد.موسیقی دوست داشتنی اوWork Me از The Black Keys می باشد.
-      anja: او مهندس و در رشته اکولوژی تحصیل کرده است و می تواند منطقی و سریع فکر کند.او در clarat در تیم تحقیق فعالیت دارد و ما را از کیفیت کارها مطمئن می کند.موسیقی دوست داشتنی او Where is my mind از den Pixies می باشد.
-      ann-sophie: او در رشته دانش فرهنگ اجتماعی تحصیل کرده است و به خوبی با موضوع مهاجرت آشنایی دارد.او به خوبی می تواند مسائل را درک و برنامه ریزی کند و در clarat در تیم تحقیق فعالیت می کند.موسیقی مورد علاقه او Papertrails از Darkside می باشد.
       anna: او کارشناس رشته لغت‌شناسی است.این بدین معنی است که او در مورد زبان و ادبیات اطلاعات زیادی دارد و می تواند به خوبی مسائل پیچیده را درک کند.در clarat در تیم تحقیق فعالیت دارد و کارشناس در بخش clarat-Sprache نیز می باشد.موسیقی مورد علاقه او 1009 از Bonobo می باشد.
       anne: او در رشته اقتصاد و روابط بین الملل تحصیل کرده است.او می تواند سریع منطقی فکر کند.در clarat او رئیس است.او وظیفه تمام تیم را بر عهده گرفته است و همه چیز را ساز مان دهی می کند.موسیقی مورد علاقه اوDenken Sie Groß از Deichkind می باشد.
       astrid: او کارشناس رشته سیاست است.این بدین معنی است که او اطلاعات زیادی درباره سیاست و اجتماع دارد.او با انرژی مثبت و انتقال آن به دیگران در clarat در تیم تحقیق فعالیت دارد و در اینترنت به دنبال سازمان های مختلف میگردد.موسیقی مورد علاقه او You Got Meاز The Roots می باشد.
@@ -1187,7 +1191,6 @@ fa:
       lisa: او کارشناس طراحی است و به همراه دیگران در توسعه راه حل های خلاقانه فعالیت می کند.او به خوبی قادر به طراحی است و در clarat در تیم تحقیق و گفتگو با استفاده کنندگان از سایت ما فعال مست.او قادر است دیگران را از نحوه استفاده از clarat آگاه کند.موسیقی مورد علاقه او Resolution از Matt Corby می باشد.
       magdalena: او در رشته پژوهشی آمریکای لاتین تحصیل کرده است.این بدین معنی است که او اطلاعات زیادی در مورد فرهنگ و سیاست آمریکای لاتین دارد.او به خوبی می توانی برنامه ریزی و جهت یابی کند.او در clarat در تیم تحقیق فعالیت می کند و موسیقی مورد علاقه او Summer Breeze از CocoRosie می باشد.
       marcus: او طراح وب است.این بدین معنی است که صفحات اینترنت را برنامه ریزی و می سازد و همچنین به خوبی طرح می ریزد.در clarat در تیم IT فعالیت می کند و مراقب آن است که صفحه اینترنتی ما زیباتر و بهتر جلوه دهد.موسیقی مورد علاقه او Hysteria از MUSE می باشد.
-      marie: او محقق صلح و اختلافات می باشد.این بدین معنی است که او اطلاعات زیادی در مورد جنگ و اختلافات دارد.او به سرعت می تواند اطلاعات را جمع آوری و تنظیم کند و در clarat در تیم تحقیق فعالیت می کند.موسیقی مورد علاقه او Move On Up از Mayfield می باشد.
       meta_description: این اعضای تیم پشت صحنه در لیست کمکی آلمان می باشد.بیش از ۴۰ کارمند روزانه در این زمینه کار می کنند که تو به راحتی کمک پیدا کنی.
       michaela: او در رشته علوم اقتصاد کامپیوتر تحصیل کرده است.او می تواند دیگران را به هیجان بیاورد و اطلاعات زیادی در مورد رسانه های جدید دارد.در clarat در تیم تحقیق فعالیت می کند و مراقب آن است که صفحه اینترنتی ما به خوبی عمل کند.موسیقی مورد علاقه او Digital Love از Daft Punk می باشد.
       nahla: او کارشناس باستان شناسی است.او اطلاعات زیادی در مورد تاریخ و انسانها دارد.سرعت کار او بالاست.در clarat در تیم ترجمه به زبان عربی فعالیت دارد.موسیقی مورد علاقه او Nassam Allina El Hawa از Fayrouz می باشد.
@@ -1427,3 +1430,4 @@ fa:
     new:
       button: پیغام دریافت شد
       email_placeholder: آدرس ایمیل
+      placeholder: 
