--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -796,6 +796,8 @@ ru:
         categories: категории
         filter: Фильтр
         map: карта
+      more_info_button: 
+      more_info_text: 
     search_results:
       bridge: для
       enclosing: найдено
@@ -887,8 +889,7 @@ ru:
         fra: Французский язык - Français
         fuf: Пулар-Пулар
         ful: Ful - Fulfulde
-        gej: 
-        gen: Gen - Mina
+        gej: Gen - Mina
         geo: грузинский - ქართული
         hau: Хаусский язык - Hausanci
         hbs: Черногорский язык - Crnogorski jezik / Црногорски језик
@@ -1007,6 +1008,7 @@ ru:
           text: Скажите, что мы можем улучшить. Или то, что тебе действительно нравится. Мы будем рады созвониться с тобой. Можно выслать тебе E-Mail с деталями?
         unavailable_location_modal: "Для твоего местонахождения на данный момент у clarat есть только\nпомощь по телефону или он-лайн. Это значит, тебе помогут по телефону \nили по интернету. Например по E-Mail или в чате. Мы тебе обязательно\nсообщим, как только у clarat появится для тебя помощь рядом с тобой.\nДля этого введи здесь свой E-Mail адрес.\n"
         send: 
+        more_information_overlay: 
       nav_lang:
         legal_title: Юридический текст clarat можно читать только на немецком языке.
         title: "Автоматический перевод! \n<br><br>\nНекоторые тексты clarat переведены на твой язык Google Translate. Иногда эти тексты могут звучать несколько странно и неправильно. Мы работаем над улучшением качества наших переводов."
@@ -1045,6 +1047,10 @@ ru:
               family: перейти к <span class="top-bar__emphasis">clarat refugees</span>
               refugees: перейти к к <span class="top-bar__emphasis">clarat family</span>
         title: Автоматический перевод!
+    modal_create:
+      js:
+        erb:
+          success: 
   offer:
     stamp:
       target_audience:
@@ -1211,8 +1217,6 @@ ru:
     about:
       amina: Амина - социолог. Она много знает об обществе. Она быстро замечает самое важное. В clarat она работает в команде сбора информации. Она решает, как именно будет clarat помогать. Ее любимая песня - La Prima Estate Эрленда Ойа (Erlend Oye).
       andrea: Андреа изучала международный менеджмент. Она многое знает об экономике и культуре. Она работает очень педантично. В clarat она работает в исследовательской команде. Она следит за качеством работы нашей команды. Ее любимая песня Work Me от The Black Keys.
-      anja: 
-      ann-sophie: 
       anna: Она - филолог. Это значит, что она много знает о языках. Кроме того, она знает толк в литературе. Она хорошо разбирается в сложных вещах. В clarat она работает в исследовательской команде. Её любимая песня - 1009 группы Bonobo.
       anne: Она изучала экономику и международные отношения. Она может очень быстро думать логически. Она главная в clarat. Она заботится о всей команде и все организует. Ее любимая песня - Denken Sie Groß группы Deichkind.
       astrid: Она политолог. Она знает много о политике и обществе. У нее всегда отличное настроение и этим она заражает всех вокруг. В clarat она работает в исследовательской команде. Ее любимая песня - You Got Me группы Рутс.
@@ -1252,7 +1256,6 @@ ru:
       lisa: Она специалист по дизайну. Это значит, что она может планировать креативные решения. И прекрасно рисует. В clarat она работает в исследовательской группе и общается с пользователями. Она также выясняет, кто пользуется системой clarat.  Ее любимая песня — Resolution от Matt Corby.
       magdalena: 
       marcus: Маркус Дизайнер по интернету. Это значит, что он умеет программировать и составлять сайты в интернете. Он тоже хорошо умеет планировать. В clarat он работает в команде технической информации. Он заботится о том, чтобы наш сайт в интернете хорошо выглядел. Его любимая песня Hysteria от группы Мьюз (Muse).
-      marie: 
       meta_description: 
       michaela: Она изучала экономическую информатику. Она может воодушевлять других людей. И она хорошо разбирается в новых СМИ. В clarat она работает в исследовательской группе и обеспечивает хорошую работу нашего сайта. Ее любимая песня — Digital Love от Daft Punk.
       nahla: Она археолог. Он много знает об истории людей. Он может быстро работать. В clatrat она работает в команде переводчиков и переводит clarat на арабский язык.  Ее любимая песня — Nassam Allina El Hawa от Fayrouz.
@@ -1505,3 +1508,4 @@ ru:
     new:
       button: Получить сообщение
       email_placeholder: E-Mail адрес
+      placeholder: 
